--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
+  
 ---
 layout: home
-author_profile: true
+excerpt: "A simple and clean responsive Jekyll theme for words and photos."
+show_excerpts: true
+paginate: true
+entries_layout: list
 ---
