--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
   
 ---
 layout: home
-#excerpt: "A simple and clean responsive Jekyll theme for words and photos."
-#show_excerpts: true
-paginate: true
+limit: 10
+show_excerpts: true
 entries_layout: list
 ---
